# packages/backend/docs/swagger.json
@@ -40,6 +40,35 @@
                 }
             }
         },
+        "/api/v1/apps/{application}": {
+            "get": {
+                "description": "Retourne application et le rapport de versions",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Applications"
+                ],
+                "summary": "Récupe une application",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Application cible",
+                        "name": "application",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/parser.ApplicationSummary"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/apps/{application}/origin": {
             "get": {
                 "description": "Liste les applications et applications qui ménent à cette application",
@@ -101,10 +130,14 @@
         "application.TrackRecord": {
             "type": "object",
             "required": [
+                "applicationUrl",
                 "kind",
                 "name"
             ],
             "properties": {
+                "applicationUrl": {
+                    "type": "string"
+                },
                 "kind": {
                     "type": "string"
                 },
@@ -115,11 +148,16 @@
         },
         "parser.ApplicationSummary": {
             "type": "object",
+            "required": [
+                "charts",
+                "instance",
+                "status"
+            ],
             "properties": {
                 "charts": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/parser.Chart"
+                        "$ref": "#/definitions/parser.Source"
                     }
                 },
                 "instance": {
@@ -130,9 +168,15 @@
                 }
             }
         },
-        "parser.Chart": {
+        "parser.Source": {
             "type": "object",
+            "required": [
+                "chart"
+            ],
             "properties": {
+                "chart": {
+                    "type": "string"
+                },
                 "newTags": {
                     "type": "array",
                     "items": {
@@ -155,6 +199,9 @@
         },
         "server.Check": {
             "type": "object",
+            "required": [
+                "status"
+            ],
             "properties": {
                 "status": {
                     "type": "string"
